Switch to reddit enhancement suite.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -85,8 +85,9 @@ python.identica.service = "identi.ca"
 python.identica.username = ""
 python.rss.display_current_buffer = "on"
 python.rss.display_weechat_buffer = "on"
-python.rss.feed = "http://forums.blind-mind.com/index.php?type=rss;action=.xml"
-python.rss.refresh_delay = "10000"
+#python.rss.feed = "http://forums.blind-mind.com/index.php?type=rss;action=.xml"
+python.rss.feed = ""
+python.rss.refresh_delay = "1000000"
 python.toggle_nicklist.action = "show"
 python.toggle_nicklist.buffers = "irc.bitlbee.&bitlbee"
 ruby.check_license = "on"
