--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.4
+# weechat.conf -- weechat v0.3.5
 #
 
 [debug]
@@ -14,6 +14,7 @@ display_version = on
 align_end_of_lines = message
 buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
+color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
 confirm_quit = off
@@ -21,7 +22,12 @@ day_change = off
 day_change_time_format = "%a, %d %b %Y"
 highlight = ""
 highlight_regex = ""
+highlight_tags = ""
 hline_char = ""
+hotlist_add_buffer_if_away = on
+hotlist_buffer_separator = ", "
+hotlist_count_max = 2
+hotlist_count_min_msg = 2
 hotlist_names_count = 3
 hotlist_names_length = 0
 hotlist_names_level = 8
@@ -29,6 +35,7 @@ hotlist_names_merged_buffers = off
 hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_unique_numbers = on
+input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
@@ -53,6 +60,7 @@ prefix_quit = "←"
 prefix_suffix = "│"
 read_marker = line
 read_marker_always_show = off
+read_marker_string = "- "
 save_config_on_exit = off
 save_layout_on_exit = none
 scroll_amount = 3
@@ -99,6 +107,10 @@ nicklist_away = brown
 nicklist_group = green
 nicklist_offline = blue
 separator = blue
+status_count_highlight = magenta
+status_count_msg = brown
+status_count_other = default
+status_count_private = green
 status_data_highlight = lightmagenta
 status_data_msg = yellow
 status_data_other = default
@@ -211,7 +223,7 @@ buffer = "irc;server.stardock;8"
 buffer = "irc;server.oftc;9"
 buffer = "irc;server.foonetic;10"
 buffer = "irc;freenode.#vim;11"
-buffer = "irc;server.synirc;12"
+buffer = "irc;freenode.#boardgames;12"
 buffer = "irc;freenode.#anime;13"
 buffer = "irc;freenode.#vimperator;14"
 buffer = "irc;freenode.#lojban;15"
@@ -219,30 +231,20 @@ buffer = "perl;highmon;16"
 buffer = "irc;server.slacked;17"
 buffer = "irc;freenode.#archlinux;18"
 buffer = "irc;stardock.#elemental;19"
-buffer = "irc;server.rizon;20"
+buffer = "irc;freenode.#reddit-anime;20"
 buffer = "irc;oftc.#heresy;21"
 buffer = "irc;foonetic.#xkcd-signal;22"
 buffer = "irc;coldfront.#achron;23"
 buffer = "perl;chanmon;24"
-buffer = "irc;oftc.NickServ;25"
+buffer = "irc;slacked.#starruler;25"
 buffer = "irc;freenode.#Reddit;26"
-buffer = "irc;freenode.#wesnoth;27"
-buffer = "irc;freenode.#python;28"
-buffer = "irc;slacked.#starruler;29"
-buffer = "irc;freenode.#archlinux-offtopic;30"
-buffer = "irc;bitlbee.identica;31"
-buffer = "irc;synirc.#starruler;32"
-buffer = "irc;freenode.#python-unregistered;33"
-buffer = "irc;freenode.##unavailable;34"
-buffer = "irc;freenode.#redditanime;35"
-buffer = "irc;slacked.#starruler-test;36"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;50;0;-;-"
 window = "4;3;0;0;irc;slacked.#starruler"
-window = "5;3;0;0;irc;freenode.#redditanime"
+window = "5;3;0;0;irc;freenode.#reddit-anime"
 window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#python"
+window = "7;6;0;0;irc;freenode.#boardgames"
 window = "8;6;0;0;irc;freenode.#archlinux"
 window = "9;1;50;1;-;-"
 window = "10;9;50;0;-;-"
@@ -253,7 +255,7 @@ window = "14;12;25;1;-;-"
 window = "15;14;25;1;-;-"
 window = "16;15;0;0;perl;chanmon"
 window = "17;15;0;0;perl;highmon"
-window = "18;14;0;0;irc;bitlbee.identica"
+window = "18;14;0;0;irc;slacked.#starruler"
 window = "19;9;50;0;-;-"
 window = "20;19;0;0;irc;foonetic.#xkcd"
 window = "21;19;0;0;irc;freenode.#vim"
