--- a/.mplayer/config
+++ b/.mplayer/config
@@ -16,12 +16,13 @@ subfont-text-scale=6 # Use 6% for subs
 osdlevel=0 # Start without the osd
 
 # Use vdpau
-vc=ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau,
+#vc=ffh264vdpau,ffmpeg12vdpau,ffwmv3vdpau,ffvc1vdpau,
 
 # Language defaults
 slang=jp,jpn,eng,en,
 alang=jp,jpn,eng,en,
 
 # Outputs
-vo=vdpau
+#vo=vdpau
+vo=xv
 ao=alsa
