--- a/.rtorrent.rc
+++ b/.rtorrent.rc
@@ -14,7 +14,7 @@ max_peers_seed = 50
 max_uploads = 8
 
 # Download/Upload speed limits
-download_rate = 5500
+#download_rate = 5500
 upload_rate = 150
 
 # Default download directory
