--- a/.weechat/logger.conf
+++ b/.weechat/logger.conf
@@ -1,5 +1,5 @@
 #
-# logger.conf -- weechat v0.3.5
+# logger.conf -- weechat v0.3.6
 #
 
 [look]
@@ -7,6 +7,7 @@ backlog = 0
 
 [file]
 auto_log = off
+flush_delay = 120
 info_lines = off
 mask = "$server/$channel"
 name_lower_case = on
