--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,5 +1,5 @@
 #
-# weechat.conf -- weechat v0.3.5
+# weechat.conf -- weechat v0.3.7
 #
 
 [debug]
@@ -12,18 +12,29 @@ display_version = on
 
 [look]
 align_end_of_lines = message
+bar_more_down = "++"
+bar_more_left = "<<"
+bar_more_right = ">>"
+bar_more_up = "--"
 buffer_notify_default = highlight
 buffer_time_format = "%H:%M"
+color_basic_force_bold = off
+color_inactive_buffer = off
+color_inactive_message = on
+color_inactive_prefix = on
+color_inactive_prefix_buffer = on
+color_inactive_time = off
+color_inactive_window = off
 color_pairs_auto_reset = 5
 color_real_white = off
 command_chars = ""
 confirm_quit = off
 day_change = off
 day_change_time_format = "%a, %d %b %Y"
+eat_newline_glitch = off
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
-hline_char = ""
 hotlist_add_buffer_if_away = on
 hotlist_buffer_separator = ", "
 hotlist_count_max = 2
@@ -39,9 +50,12 @@ input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
 input_undo_max = 32
+item_buffer_filter = "*"
 item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
+mouse = off
+mouse_timer_delay = 100
 nickmode = on
 nickmode_empty = off
 paste_max_lines = 3
@@ -64,8 +78,11 @@ read_marker_string = "- "
 save_config_on_exit = off
 save_layout_on_exit = none
 scroll_amount = 3
+scroll_bottom_after_switch = off
 scroll_page_percent = 100
 search_text_not_found_alert = on
+separator_horizontal = "-"
+separator_vertical = ""
 set_title = on
 time_format = "%a, %d %b %Y %T"
 
@@ -81,12 +98,15 @@ chat_delimiters = green
 chat_highlight = yellow
 chat_highlight_bg = magenta
 chat_host = magenta
+chat_inactive_buffer = darkgray
+chat_inactive_window = darkgray
 chat_nick = lightcyan
 chat_nick_colors = "lightblue,lightmagenta,green,brown,lightgreen,lightcyan"
 chat_nick_other = cyan
 chat_nick_self = white
 chat_prefix_action = white
 chat_prefix_buffer = brown
+chat_prefix_buffer_inactive_buffer = darkgray
 chat_prefix_error = yellow
 chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
@@ -96,6 +116,7 @@ chat_prefix_suffix = green
 chat_read_marker = magenta
 chat_read_marker_bg = default
 chat_server = brown
+chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
 chat_time = cyan
@@ -123,6 +144,7 @@ status_number = yellow
 status_time = default
 
 [completion]
+base_word_until_cursor = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
 nick_completer = ":"
@@ -136,8 +158,9 @@ partial_completion_other = off
 
 [history]
 display_default = 5
+max_buffer_lines_minutes = 0
+max_buffer_lines_number = 4096
 max_commands = 100
-max_lines = 4096
 max_visited_buffers = 50
 
 [proxy]
@@ -213,52 +236,43 @@ title.type = window
 
 [layout]
 buffer = "irc;server.bitlbee;1"
-buffer = "irc;bitlbee.&bitlbee;2"
-buffer = "irc;oftc.#awesome;3"
-buffer = "core;weechat;4"
-buffer = "irc;foonetic.#xkcd;5"
-buffer = "irc;server.freenode;6"
-buffer = "irc;server.coldfront;7"
-buffer = "irc;server.stardock;8"
-buffer = "irc;server.oftc;9"
-buffer = "irc;server.foonetic;10"
-buffer = "irc;freenode.#vim;11"
-buffer = "irc;freenode.#boardgames;12"
-buffer = "irc;freenode.#anime;13"
-buffer = "irc;freenode.#vimperator;14"
-buffer = "irc;freenode.#lojban;15"
-buffer = "perl;highmon;16"
-buffer = "irc;server.slacked;17"
-buffer = "irc;freenode.#archlinux;18"
-buffer = "irc;stardock.#elemental;19"
-buffer = "irc;freenode.#reddit-anime;20"
-buffer = "irc;oftc.#heresy;21"
-buffer = "irc;foonetic.#xkcd-signal;22"
-buffer = "irc;coldfront.#achron;23"
-buffer = "perl;chanmon;24"
-buffer = "irc;slacked.#starruler;25"
-buffer = "irc;freenode.#Reddit;26"
+buffer = "irc;oftc.#awesome;2"
+buffer = "core;weechat;3"
+buffer = "irc;foonetic.#xkcd;4"
+buffer = "irc;server.freenode;5"
+buffer = "irc;server.coldfront;6"
+buffer = "irc;server.stardock;7"
+buffer = "irc;server.oftc;8"
+buffer = "irc;server.foonetic;9"
+buffer = "irc;freenode.#vim;10"
+buffer = "irc;freenode.#anime;11"
+buffer = "irc;freenode.#vimperator;12"
+buffer = "irc;freenode.#lojban;13"
+buffer = "perl;highmon;14"
+buffer = "irc;server.slacked;15"
+buffer = "irc;freenode.#archlinux;16"
+buffer = "irc;stardock.#elemental;17"
+buffer = "irc;freenode.#reddit-anime;18"
+buffer = "irc;oftc.#heresy;19"
+buffer = "irc;foonetic.#xkcd-signal;20"
+buffer = "irc;coldfront.#achron;21"
+buffer = "perl;chanmon;22"
+buffer = "irc;slacked.#starruler;23"
+buffer = "irc;server.quakenet;24"
+buffer = "irc;quakenet.#joindota;25"
+buffer = "irc;quakenet.#dota2.cw;26"
+buffer = "irc;quakenet.#c9-dl;27"
+buffer = "irc;freenode.#python-unregistered;28"
+buffer = "irc;slacked.seronis;29"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
-window = "3;2;50;0;-;-"
-window = "4;3;0;0;irc;slacked.#starruler"
-window = "5;3;0;0;irc;freenode.#reddit-anime"
-window = "6;2;50;0;-;-"
-window = "7;6;0;0;irc;freenode.#boardgames"
-window = "8;6;0;0;irc;freenode.#archlinux"
-window = "9;1;50;1;-;-"
-window = "10;9;50;0;-;-"
-window = "11;10;0;0;irc;freenode.#anime"
-window = "12;10;20;0;-;-"
-window = "13;12;0;0;irc;bitlbee.&bitlbee"
-window = "14;12;25;1;-;-"
-window = "15;14;25;1;-;-"
-window = "16;15;0;0;perl;chanmon"
-window = "17;15;0;0;perl;highmon"
-window = "18;14;0;0;irc;slacked.#starruler"
-window = "19;9;50;0;-;-"
-window = "20;19;0;0;irc;foonetic.#xkcd"
-window = "21;19;0;0;irc;freenode.#vim"
+window = "3;2;0;0;irc;slacked.#starruler"
+window = "4;2;0;0;irc;freenode.#anime"
+window = "5;1;50;1;-;-"
+window = "6;5;50;1;-;-"
+window = "7;6;0;0;perl;chanmon"
+window = "8;6;0;0;perl;highmon"
+window = "9;5;0;0;irc;foonetic.#xkcd"
 
 [notify]
 highmon = none
@@ -304,6 +318,18 @@ ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input delete_next_char"
 ctrl-Y = "/input clipboard_paste"
+meta-meta2-1~ = "/window scroll_top"
+meta-meta2-23~ = "/bar scroll nicklist * yb"
+meta-meta2-24~ = "/bar scroll nicklist * ye"
+meta-meta2-4~ = "/window scroll_bottom"
+meta-meta2-5~ = "/window scroll_up"
+meta-meta2-6~ = "/window scroll_down"
+meta-meta2-7~ = "/window scroll_top"
+meta-meta2-8~ = "/window scroll_bottom"
+meta-meta2-A = "/buffer -1"
+meta-meta2-B = "/buffer +1"
+meta-meta2-C = "/buffer +1"
+meta-meta2-D = "/buffer -1"
 meta-/ = "/input hotlist_clear"
 meta-0 = "/buffer 10"
 meta-1 = "/buffer 1"
@@ -350,18 +376,6 @@ meta2-G = "/window page_down"
 meta2-H = "/input move_beginning_of_line"
 meta2-I = "/window page_up"
 meta2-Z = "/input complete_previous"
-meta-meta2-1~ = "/window scroll_top"
-meta-meta2-23~ = "/bar scroll nicklist * yb"
-meta-meta2-24~ = "/bar scroll nicklist * ye"
-meta-meta2-4~ = "/window scroll_bottom"
-meta-meta2-5~ = "/window scroll_up"
-meta-meta2-6~ = "/window scroll_down"
-meta-meta2-7~ = "/window scroll_top"
-meta-meta2-8~ = "/window scroll_bottom"
-meta-meta2-A = "/buffer -1"
-meta-meta2-B = "/buffer +1"
-meta-meta2-C = "/buffer +1"
-meta-meta2-D = "/buffer -1"
 meta-a = "/a"
 meta-b = "/window page_up"
 meta-cc = "/input delete_line"
@@ -369,6 +383,9 @@ meta-d = "/input delete_next_word"
 meta-f = "/window page_down"
 meta-g = "/go -window"
 meta-h = "/window left"
+meta-jmeta-l = "/input jump_last_buffer"
+meta-jmeta-p = "/input jump_previous_buffer"
+meta-jmeta-r = "/server raw"
 meta-j01 = "/buffer 1"
 meta-j02 = "/buffer 2"
 meta-j03 = "/buffer 3"
@@ -468,9 +485,6 @@ meta-j96 = "/buffer 96"
 meta-j97 = "/buffer 97"
 meta-j98 = "/buffer 98"
 meta-j99 = "/buffer 99"
-meta-jmeta-l = "/input jump_last_buffer"
-meta-jmeta-p = "/input jump_previous_buffer"
-meta-jmeta-r = "/server raw"
 meta-jj = "/input history_next"
 meta-k = "/input history_previous"
 meta-l = "/window right"
@@ -491,3 +505,56 @@ meta-z = "/window zoom"
 ctrl-b = "/window page_up"
 ctrl-f = "/window page_down"
 ctrl-h = "/input move_previous_char"
+
+[key_search]
+ctrl-J = "/input search_stop"
+ctrl-M = "/input search_stop"
+ctrl-R = "/input search_switch_case"
+meta2-A = "/input search_previous"
+meta2-B = "/input search_next"
+
+[key_cursor]
+ctrl-J = "/cursor stop"
+ctrl-M = "/cursor stop"
+meta-meta2-A = "/cursor move area_up"
+meta-meta2-B = "/cursor move area_down"
+meta-meta2-C = "/cursor move area_right"
+meta-meta2-D = "/cursor move area_left"
+meta2-1;3A = "/cursor move area_up"
+meta2-1;3B = "/cursor move area_down"
+meta2-1;3C = "/cursor move area_right"
+meta2-1;3D = "/cursor move area_left"
+meta2-A = "/cursor move up"
+meta2-B = "/cursor move down"
+meta2-C = "/cursor move right"
+meta2-D = "/cursor move left"
+@item(buffer_nicklist):K = "/window ${_window_number};/kickban ${nick}"
+@item(buffer_nicklist):b = "/window ${_window_number};/ban ${nick}"
+@item(buffer_nicklist):k = "/window ${_window_number};/kick ${nick}"
+@item(buffer_nicklist):q = "/window ${_window_number};/query ${nick};/cursor stop"
+@item(buffer_nicklist):w = "/window ${_window_number};/whois ${nick}"
+@chat:Q = "hsignal:chat_quote_time_prefix_message;/cursor stop"
+@chat:m = "hsignal:chat_quote_message;/cursor stop"
+@chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
+
+[key_mouse]
+@bar(input):button2 = "/input grab_mouse_area"
+@bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
+@bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
+@bar(nicklist):button1-gesture-up = "/bar scroll nicklist ${_window_number} -100%"
+@bar(nicklist):button1-gesture-up-long = "/bar scroll nicklist ${_window_number} b"
+@item(buffer_nicklist):button1 = "/window ${_window_number};/query ${nick}"
+@item(buffer_nicklist):button1-gesture-left = "/window ${_window_number};/kick ${nick}"
+@item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
+@item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
+@item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
+@bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
+@bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
+@chat:button1 = "/window ${_window_number}"
+@chat:button1-gesture-left = "/window ${_window_number};/buffer -1"
+@chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
+@chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
+@chat:button1-gesture-right-long = "/window ${_window_number};/input jump_last_buffer"
+@chat:wheeldown = "/window scroll_down -window ${_window_number}"
+@chat:wheelup = "/window scroll_up -window ${_window_number}"
+@*:button3 = "/cursor go ${_x},${_y}"
