--- a/.mplayer/config
+++ b/.mplayer/config
@@ -3,7 +3,7 @@
 fs=yes # Start in fullscreen
 ontop=yes # Put mplayer on top of everything
 mouseinput=no # Disable the mouse
-volume=100 # Start at full volume
+#volume=100 # Start at full volume
 cache=9999 # Use a large cache
 channels=2 # Use 2 channels by default
 lavdopts=threads=6 # Use 6 threads for x264
