--- a/.sysconfig/desktop/smb.conf
+++ b/.sysconfig/desktop/smb.conf
@@ -28,6 +28,15 @@ path = /data/series
 available = yes
 browsable = yes
 public = yes
+guest ok = yes
+writable = no
+
+[music]
+path = /data/music
+available = yes
+browsable = yes
+public = yes
+guest ok = yes
 writable = no
 
 [films]
@@ -76,13 +85,3 @@ browsable = yes
 public = yes
 writable = yes
 guest ok = yes
-
-[starruler]
-path = /home/archlucas/starruler
-available = yes
-browsable = yes
-public = yes
-writable = yes
-guest ok = yes
-hosts deny = ALL
-hosts allow = 192.168.1.200
