--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -1,9 +1,10 @@
 #
-# plugins.conf -- weechat v0.3.9.1
+# plugins.conf -- weechat v0.3.9.2
 #
 
 [var]
 fifo.fifo = "on"
+guile.check_license = "on"
 lua.check_license = "on"
 perl.chanmon.alignment = "channel"
 perl.chanmon.bitlbee.&bitlbee = "on"
