--- a/.sysconfig/desktop/xorg.conf
+++ b/.sysconfig/desktop/xorg.conf
@@ -1,148 +1,112 @@
 Section "ServerLayout"
-    Identifier     "Layout0"
-    Screen      0  "Screen4" 2680 2050 # Main left
-    Screen      1  "Screen5" 5728 2050 # Main right
-    Screen      2  "Screen0" 8776 2050 # Outer right
-    Screen      3  "Screen1" 0 2050 # Outer left
-
-    Screen      4  "Screen2" 2048 0 # Upper left
-    Screen      5  "Screen3" 4728 0 # Upper right
+	Identifier     "Layout0"
+	Screen      0  "Screen0" 0 0
 EndSection
 
 Section "ServerFlags"
-    # Don't use screensaver, turn
-    # screens off after 15 minutes
-    Option         "BlankTime" "0"
-    Option         "StandbyTime" "0"
-    Option         "SuspendTime" "0"
-    Option         "OffTime" "15"
 
-    Option "DontZap" "false"
-    Option "AutoAddDevices" "false"
-EndSection
-
-# {{{ Monitors
-Section "Monitor"
-    Identifier     "Monitor0"
-    Option         "DPI" "99x98"
+    # Don't use screensaver
+	Option	    "BlankTime" "0"
+	Option	    "StandbyTime" "0"
+	Option	    "SuspendTime" "0"
+	Option	    "OffTime" "0"
+	Option	    "DontZap" "false"
+	Option	    "AutoAddDevices" "false"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor1"
-    Option         "DPI" "99x98"
+	Identifier   "0-DFP9"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "PreferredMode" "2048x1152"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "6272 1050"
+	Option	    "Rotate" "normal"
+	Option	    "Disable" "false"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor2"
-    Option         "DPI" "99x98"
+	Identifier   "0-DFP13"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "PreferredMode" "2048x1152"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "0 442"
+	Option	    "Rotate" "left"
+	Option	    "Disable" "false"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor3"
-    Option         "DPI" "99x98"
+	Identifier   "0-DFP17"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "PreferredMode" "1680x1050"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "2032 0"
+	Option	    "Rotate" "normal"
+	Option	    "Disable" "false"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor4"
-    Option         "DPI" "99x98"
+	Identifier   "0-DFP21"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "3712 0"
+	Option	    "Rotate" "normal"
+	Option	    "Disable" "false"
+	Option	    "PreferredMode" "1680x1050"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor5"
-    Option         "DPI" "99x98"
-EndSection
-# }}}
-
-# {{{ Cards
-Section "Device"
-    Identifier     "nVidia0.0"
-    Driver         "nvidia"
-    BusID          "PCI:2:0:0"
-    Screen         0
+	Identifier   "0-DFP1"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "PreferredMode" "2560x1440"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "1152 1050"
+	Option	    "Rotate" "normal"
+	Option	    "Disable" "false"
 EndSection
 
-Section "Device"
-    Identifier     "nVidia0.1"
-    Driver         "nvidia"
-    BusID          "PCI:2:0:0"
-    Screen         1
-EndSection
-
-Section "Device"
-    Identifier     "nVidia1.0"
-    Driver         "nvidia"
-    BusID          "PCI:3:0:0"
-    Screen         0
+Section "Monitor"
+	Identifier   "0-DFP5"
+	Option	    "VendorName" "ATI Proprietary Driver"
+	Option	    "ModelName" "Generic Autodetecting Monitor"
+	Option	    "DPMS" "true"
+	Option	    "PreferredMode" "2560x1440"
+	Option	    "TargetRefresh" "60"
+	Option	    "Position" "3712 1050"
+	Option	    "Rotate" "normal"
+	Option	    "Disable" "false"
 EndSection
 
 Section "Device"
-    Identifier     "nVidia1.1"
-    Driver         "nvidia"
-    BusID          "PCI:3:0:0"
-    Screen         1
+	Identifier  "radeon0"
+	Driver      "fglrx"
+	Option	    "Monitor-DFP1" "0-DFP1"
+	Option	    "Monitor-DFP5" "0-DFP5"
+	Option	    "Monitor-DFP9" "0-DFP9"
+	Option	    "Monitor-DFP13" "0-DFP13"
+	Option	    "Monitor-DFP17" "0-DFP17"
+	Option	    "Monitor-DFP21" "0-DFP21"
+	Option	    "SwapScreens" "off"
+	BusID       "PCI:3:0:0"
 EndSection
 
-Section "Device"
-    Identifier     "nVidia2.0"
-    Driver         "nvidia"
-    BusID          "PCI:4:0:0"
-    Screen         0
-EndSection
-
-Section "Device"
-    Identifier     "nVidia2.1"
-    Driver         "nvidia"
-    BusID          "PCI:4:0:0"
-    Screen         1
-EndSection
-# }}}
-
-# {{{ Screens
 Section "Screen"
+
     # Main Left
-    Identifier     "Screen0"
-    Device         "nVidia0.0"
-    Monitor        "Monitor0"
-    DefaultDepth    24
+	Identifier "Screen0"
+	Device     "radeon0"
+	DefaultDepth     24
+	SubSection "Display"
+		Virtual   10000 2600
+	EndSubSection
 EndSection
 
-Section "Screen"
-    # Main Right
-    Identifier     "Screen1"
-    Device         "nVidia0.1"
-    Monitor        "Monitor1"
-    DefaultDepth    24
-EndSection
-
-Section "Screen"
-    # Upper left
-    Identifier     "Screen2"
-    Device         "nVidia2.0"
-    Monitor        "Monitor2"
-    DefaultDepth    24
-EndSection
-
-Section "Screen"
-    # Outer right
-    Identifier     "Screen3"
-    Device         "nVidia2.1"
-    Monitor        "Monitor3"
-    DefaultDepth    24
-EndSection
-
-Section "Screen"
-    # Upper right
-    Identifier     "Screen4"
-    Device         "nVidia1.0"
-    Monitor        "Monitor4"
-    DefaultDepth    24
-EndSection
-
-Section "Screen"
-    # Outer left
-    Identifier     "Screen5"
-    Device         "nVidia1.1"
-    Monitor        "Monitor5"
-    DefaultDepth    24
-EndSection
-# }}}
