--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,2 +1,9 @@
 map b WatchMark
 map B MarkOnly
+set colorscheme oblivion
+set draw_bookmark_borders false
+set show_cursor false
+set sort basename
+set sort_case_insensitive true
+set autosave_bookmarks false
+set flushinput false
