--- a/.i3/config
+++ b/.i3/config
@@ -9,6 +9,7 @@ focus_follows_mouse no
 
 # start a terminal
 bindsym $mod+semicolon exec urxvtc
+bindsym $mod+f7 exec xterm
 
 # execute things
 bindsym $mod+o exec toggle_mic
@@ -18,6 +19,7 @@ bindsym $mod+F5 exec system_suspend 2
 bindsym $mod+F12 exec i3-start
 bindsym $mod+mod1+ampersand exec i3-def
 bindsym $mod+space exec i3-selwin
+bindsym $mod+numbersign exec setwintitle
 
 # kill focused window
 bindsym $mod+dollar kill
@@ -113,7 +115,8 @@ bindsym $mod+mod5+ampersand focus output DFP1
 bindsym $mod+mod5+bracketleft focus output DFP5
 bindsym $mod+mod5+braceleft focus output DFP9
 bindsym $mod+mod5+braceright focus output DFP13
-bindsym $mod+apostrophe exec i3-newws
+bindsym $mod+z exec i3-newws
+bindsym $mod+Shift+z exec i3-newws move
 
 bindsym $mod+m exec i3-selws
 bindsym $mod+Shift+m exec i3-movews
@@ -123,11 +126,11 @@ bindsym $mod+Shift+slash exec i3-input -F 'mark %s' -P 'Create Mark: '
 
 bindsym $mod+w workspace next_on_output
 bindsym $mod+v workspace prev_on_output
-bindsym $mod+z workspace back_and_forth
+bindsym $mod+apostrophe workspace back_and_forth
 
 bindsym $mod+Shift+w move container to workspace next_on_output
 bindsym $mod+Shift+v move container to workspace prev_on_output
-bindsym $mod+Shift+z move container to workspace back_and_forth
+bindsym $mod+Shift+apostrophe move container to workspace back_and_forth
 
 # move focused container to workspace
 bindsym $mod+Shift+ampersand move container to workspace h
@@ -144,13 +147,21 @@ bindsym $mod+Shift+p reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+y restart
 
+#workspace assignments
+assign [title="Star Ruler"] sr
+assign [title="GLFW"] sr
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
-    bindsym h resize shrink width 10 px or 10 ppt
-    bindsym t resize grow height 10 px or 10 ppt
-    bindsym n resize shrink height 10 px or 10 ppt
-    bindsym s resize grow width 10 px or 10 ppt
-    bindsym l resize grow width 10 px or 10 ppt
+    bindsym Shift+h resize shrink width 10 px or 10 ppt
+    bindsym Shift+t resize grow height 10 px or 10 ppt
+    bindsym Shift+n resize shrink height 10 px or 10 ppt
+    bindsym Shift+l resize grow width 10 px or 10 ppt
+
+    bindsym h resize shrink width 20 px or 20 ppt
+    bindsym t resize grow height 20 px or 20 ppt
+    bindsym n resize shrink height 20 px or 20 ppt
+    bindsym l resize grow width 20 px or 20 ppt
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
