Switch to dwb browser.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.mplayer/input.conf
+++ b/.mplayer/input.conf
@@ -30,6 +30,10 @@ $ audio_delay -0.100
 > pt_step 1
 < pt_step -1
 
+##Zoom control
+o panscan -0.2
+i panscan 0.2
+
 ## Control
 f vo_fullscreen
 r screenshot
