--- a/.weechat/logger.conf
+++ b/.weechat/logger.conf
@@ -1,5 +1,5 @@
 #
-# logger.conf -- weechat v0.4.0
+# logger.conf -- weechat v0.4.1
 #
 
 [look]
@@ -15,6 +15,8 @@ flush_delay = 120
 info_lines = off
 mask = "$server/$channel"
 name_lower_case = on
+nick_prefix = ""
+nick_suffix = ""
 path = "/mnt/data-5/others/irclogs/current"
 replacement_char = "_"
 time_format = "%Y-%m-%d %H:%M:%S"
