Update keyboard layout for switch to ergodox.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -56,17 +56,13 @@ jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 mouse = off
 mouse_timer_delay = 100
-nickmode = on
-nickmode_empty = off
 paste_max_lines = 3
 prefix_action = "━━"
 prefix_align = right
 prefix_align_max = 10
 prefix_align_min = 0
-prefix_align_more = on
 prefix_buffer_align = right
 prefix_buffer_align_max = 10
-prefix_buffer_align_more = on
 prefix_error = "━‼━"
 prefix_join = "→"
 prefix_network = "━━"
@@ -197,7 +193,7 @@ nicklist.color_fg = default
 nicklist.conditions = "nicklist"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -236,34 +232,21 @@ title.type = window
 
 [layout]
 buffer = "irc;server.bitlbee;1"
-buffer = "irc;oftc.#awesome;2"
 buffer = "core;weechat;3"
 buffer = "irc;foonetic.#xkcd;4"
 buffer = "irc;server.freenode;5"
-buffer = "irc;server.coldfront;6"
-buffer = "irc;server.stardock;7"
-buffer = "irc;server.oftc;8"
 buffer = "irc;server.foonetic;9"
 buffer = "irc;freenode.#vim;10"
 buffer = "irc;freenode.#anime;11"
-buffer = "irc;freenode.#vimperator;12"
 buffer = "irc;freenode.#lojban;13"
 buffer = "perl;highmon;14"
 buffer = "irc;server.slacked;15"
 buffer = "irc;freenode.#archlinux;16"
-buffer = "irc;stardock.#elemental;17"
 buffer = "irc;freenode.#reddit-anime;18"
-buffer = "irc;oftc.#heresy;19"
 buffer = "irc;foonetic.#xkcd-signal;20"
-buffer = "irc;coldfront.#achron;21"
 buffer = "perl;chanmon;22"
 buffer = "irc;slacked.#starruler;23"
 buffer = "irc;server.quakenet;24"
-buffer = "irc;quakenet.#joindota;25"
-buffer = "irc;quakenet.#dota2.cw;26"
-buffer = "irc;quakenet.#c9-dl;27"
-buffer = "irc;freenode.#python-unregistered;28"
-buffer = "irc;slacked.seronis;29"
 window = "1;0;50;0;-;-"
 window = "2;1;50;1;-;-"
 window = "3;2;0;0;irc;slacked.#starruler"
@@ -276,12 +259,8 @@ window = "9;5;0;0;irc;foonetic.#xkcd"
 
 [notify]
 highmon = none
-irc.server.bitlbee = none
-irc.server.coldfront = none
 irc.server.foonetic = none
 irc.server.freenode = none
-irc.server.oftc = none
-irc.server.rizon = none
 perl.highmon = none
 
 [filter]
