--- a/.weechat/irc_.conf
+++ b/.weechat/irc_.conf
@@ -1,36 +1,52 @@
-#
-# irc.conf -- weechat v0.3.2-dev
-#
-
 [look]
+buffer_switch_autojoin = on
+buffer_switch_join = on
+color_nicks_in_names = off
+color_nicks_in_nicklist = off
 color_nicks_in_server_messages = on
 color_pv_nick_like_channel = on
+ctcp_time_format = "%a, %d %b %Y %T %z"
 display_away = local
 display_ctcp_blocked = on
 display_ctcp_reply = on
 display_ctcp_unknown = on
+display_host_join = on
+display_host_join_local = on
+display_host_quit = on
+display_join_message = "329,332,333,366"
 display_old_topic = off
-hide_nickserv_pwd = on
+display_pv_away_once = on
+display_pv_back = on
+highlight_channel = "$nick"
+highlight_pv = "$nick"
+highlight_server = "$nick"
 highlight_tags = "irc_privmsg,irc_notice"
-item_channel_modes = off
+item_away_message = on
 item_channel_modes_hide_key = off
 item_display_server = buffer_plugin
 item_nick_modes = on
 item_nick_prefix = on
 msgbuffer_fallback = current
+new_channel_position = none
+new_pv_position = none
+nick_color_force = ""
+nick_color_stop_chars = "_|["
 nick_completion_smart = speakers
-nick_prefix = ""
-nick_suffix = ""
+nick_mode = prefix
+nick_mode_empty = off
+nicks_hide_password = "nickserv"
 notice_as_pv = auto
-open_channel_near_server = off
-open_pv_near_server = off
+notify_tags_ison = "notify_message"
+notify_tags_whois = "notify_message"
 part_closes_buffer = off
+pv_buffer = independent
 raw_messages = 256
 server_buffer = independent
-show_away_once = on
 smart_filter = on
 smart_filter_delay = 5
 smart_filter_join = on
+smart_filter_join_unmask = 30
+smart_filter_nick = on
 smart_filter_quit = on
 topic_strip_colors = off
 
@@ -38,44 +54,61 @@ topic_strip_colors = off
 input_nick = lightcyan
 item_away = yellow
 item_channel_modes = default
+item_lag_counting = default
+item_lag_finished = yellow
 message_join = green
 message_quit = red
+mirc_remap = "1,-1:darkgray"
+nick_prefixes = "q:lightred;a:lightcyan;o:lightgreen;h:lightmagenta;v:yellow;*:lightblue"
 notice = green
+reason_quit = default
+topic_new = white
+topic_old = darkgray
 
 [network]
-anti_flood_prio_high = 2
-anti_flood_prio_low = 2
-away_check = 5
-away_check_max_nicks = 25
+alternate_nick = on
+autoreconnect_delay_growing = 2
+autoreconnect_delay_max = 1800
 colors_receive = on
 colors_send = on
-connection_timeout = 60
-default_msg_part = ""
-default_msg_quit = ""
 lag_check = 60
-lag_disconnect = 5
 lag_min_show = 2
+lag_reconnect = 0
+lag_refresh_interval = 1
+notify_check_ison = 1
+notify_check_whois = 5
 send_unknown_commands = off
+whois_double_nick = on
 
 [msgbuffer]
 
 [ctcp]
 
 [ignore]
+ignore = *;*;^Gigen$
 
 [server_default]
 addresses = ""
+anti_flood_prio_high = 2
+anti_flood_prio_low = 2
 autoconnect = on
 autojoin = ""
 autoreconnect = on
 autoreconnect_delay = 30
 autorejoin = off
 autorejoin_delay = 30
-command = "/msg nickserv identify ...
+away_check = 0
+away_check_max_nicks = 25
+capabilities = ""
+#command = ""/msg nickserv identify ..."
 command_delay = 0
+connection_timeout = 60
+default_msg_part = "WeeChat %v"
+default_msg_quit = "WeeChat %v"
 ipv6 = off
 local_hostname = ""
 nicks = "GGLucas,GGLucas_"
+notify = ""
 password = ""
 proxy = ""
 realname = "Lucas de Vries"
@@ -86,21 +119,178 @@ sasl_username = ""
 ssl = off
 ssl_cert = ""
 ssl_dhkey_size = 2048
+ssl_priorities = "NORMAL"
 ssl_verify = on
 username = "GGLucas"
 
 [server]
 freenode.addresses = "glacicle.org/7778"
-freenode.password = "GGLucas:...:freenode"
-bitlbee.addresses = "glacicle.org/7778"
-bitlbee.password = "GGLucas:...:bitlbee"
-oftc.addresses = "glacicle.org/7778"
-oftc.password = "GGLucas:...:oftc"
+freenode.proxy
+freenode.ipv6
+freenode.ssl
+freenode.ssl_cert
+freenode.ssl_priorities
+freenode.ssl_dhkey_size
+freenode.ssl_verify
+freenode.password = ""
+freenode.capabilities
+freenode.sasl_mechanism
+freenode.sasl_username
+freenode.sasl_password
+freenode.sasl_timeout
+freenode.autoconnect
+freenode.autoreconnect
+freenode.autoreconnect_delay
+freenode.nicks
+freenode.username
+freenode.realname
+freenode.local_hostname
+freenode.command
+freenode.command_delay
+freenode.autojoin
+freenode.autorejoin
+freenode.autorejoin_delay
+freenode.connection_timeout
+freenode.anti_flood_prio_high
+freenode.anti_flood_prio_low
+freenode.away_check
+freenode.away_check_max_nicks
+freenode.default_msg_part
+freenode.default_msg_quit
+freenode.notify
 foonetic.addresses = "glacicle.org/7778"
-foonetic.password = "GGLucas:...:foonetic"
+foonetic.proxy
+foonetic.ipv6
+foonetic.ssl
+foonetic.ssl_cert
+foonetic.ssl_priorities
+foonetic.ssl_dhkey_size
+foonetic.ssl_verify
+foonetic.password = ""
+foonetic.capabilities
+foonetic.sasl_mechanism
+foonetic.sasl_username
+foonetic.sasl_password
+foonetic.sasl_timeout
+foonetic.autoconnect
+foonetic.autoreconnect
+foonetic.autoreconnect_delay
+foonetic.nicks
+foonetic.username
+foonetic.realname
+foonetic.local_hostname
+foonetic.command
+foonetic.command_delay
+foonetic.autojoin
+foonetic.autorejoin
+foonetic.autorejoin_delay
+foonetic.connection_timeout
+foonetic.anti_flood_prio_high
+foonetic.anti_flood_prio_low
+foonetic.away_check
+foonetic.away_check_max_nicks
+foonetic.default_msg_part
+foonetic.default_msg_quit
+foonetic.notify
 coldfront.addresses = "glacicle.org/7778"
-coldfront.password = "GGLucas:...:coldfront"
-stardock.addresses = "glacicle.org/7778"
-stardock.password = "GGLucas:...:stardock"
+coldfront.proxy
+coldfront.ipv6
+coldfront.ssl
+coldfront.ssl_cert
+coldfront.ssl_priorities
+coldfront.ssl_dhkey_size
+coldfront.ssl_verify
+coldfront.password = ""
+coldfront.capabilities
+coldfront.sasl_mechanism
+coldfront.sasl_username
+coldfront.sasl_password
+coldfront.sasl_timeout
+coldfront.autoconnect
+coldfront.autoreconnect
+coldfront.autoreconnect_delay
+coldfront.nicks
+coldfront.username
+coldfront.realname
+coldfront.local_hostname
+coldfront.command
+coldfront.command_delay
+coldfront.autojoin
+coldfront.autorejoin
+coldfront.autorejoin_delay
+coldfront.connection_timeout
+coldfront.anti_flood_prio_high
+coldfront.anti_flood_prio_low
+coldfront.away_check
+coldfront.away_check_max_nicks
+coldfront.default_msg_part
+coldfront.default_msg_quit
+coldfront.notify
 slacked.addresses = "glacicle.org/7778"
-slacked.password = "GGLucas:...:slacked"
+slacked.proxy
+slacked.ipv6
+slacked.ssl
+slacked.ssl_cert
+slacked.ssl_priorities
+slacked.ssl_dhkey_size
+slacked.ssl_verify
+slacked.password = ""
+slacked.capabilities
+slacked.sasl_mechanism
+slacked.sasl_username
+slacked.sasl_password
+slacked.sasl_timeout
+slacked.autoconnect
+slacked.autoreconnect
+slacked.autoreconnect_delay
+slacked.nicks
+slacked.username
+slacked.realname
+slacked.local_hostname
+slacked.command
+slacked.command_delay
+slacked.autojoin
+slacked.autorejoin
+slacked.autorejoin_delay
+slacked.connection_timeout
+slacked.anti_flood_prio_high
+slacked.anti_flood_prio_low
+slacked.away_check
+slacked.away_check_max_nicks
+slacked.default_msg_part
+slacked.default_msg_quit
+slacked.notify
+quakenet.addresses = "glacicle.org/7778"
+quakenet.proxy
+quakenet.ipv6
+quakenet.ssl
+quakenet.ssl_cert
+quakenet.ssl_priorities
+quakenet.ssl_dhkey_size
+quakenet.ssl_verify
+quakenet.password = ""
+quakenet.capabilities
+quakenet.sasl_mechanism
+quakenet.sasl_username
+quakenet.sasl_password
+quakenet.sasl_timeout
+quakenet.autoconnect
+quakenet.autoreconnect
+quakenet.autoreconnect_delay
+quakenet.nicks
+quakenet.username
+quakenet.realname
+quakenet.local_hostname
+quakenet.command
+quakenet.command_delay
+quakenet.autojoin
+quakenet.autorejoin
+quakenet.autorejoin_delay
+quakenet.connection_timeout
+quakenet.anti_flood_prio_high
+quakenet.anti_flood_prio_low
+quakenet.away_check
+quakenet.away_check_max_nicks
+quakenet.default_msg_part
+quakenet.default_msg_quit
+quakenet.notify
