--- a/.weechat/plugins.conf
+++ b/.weechat/plugins.conf
@@ -84,6 +84,12 @@ python.identica.re = "^(\[[0-9][0-9]:[0-9][0-9]\] )?(?P<update>\w+)(?P<separator
 python.identica.scheme = "https"
 python.identica.service = "identi.ca"
 python.identica.username = ""
+python.notify.icon = "/usr/share/pixmaps/weechat.xpm"
+python.notify.nick_separator = ": "
+python.notify.show_hilights = "on"
+python.notify.show_priv_msg = "on"
+python.notify.smart_notification = "off"
+python.notify.urgency = "normal"
 python.rss.display_current_buffer = "on"
 python.rss.display_weechat_buffer = "on"
 python.rss.feed = ""
